--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@ Since the launch of Lifebuoy in 1894, our iconic red soap bar and its distinctiv
 <hr>
 <table>
     <tr>
-        <th>
+        <thead>
+              <th>
             Flavor 
         </th>
         <th>
             Price
         </th>
         </tr>
+        </thead>
         <tr>
         <td>
             Herbal Green
